Increased hash security and added stuff to cycle 4, changed formatting of subheading

--- a/biome/biome.html
+++ b/biome/biome.html
@@ -42,7 +42,8 @@
             <main id="main">
               <br />
         <h2 id="thingHead"><strong>Biome Artwork</strong></h2>
-        <p>Every year, we have two biomes trips, one being the Mini Biome Trip and one being the actual Biome Trip. These are both part of two of the year's biggest assignments, being the Mini Biome Report and the Biome Report. During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to many other things, we always had fun art projects on these trips.</p>
+        <p>Every year, we have two biomes trips, one being the Mini Biome Trip and one being the actual Biome Trip. These are both part of two of the year's biggest assignments, being the Mini Biome Report and the Biome Report.
+          During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to many other things, we always had fun art projects on these trips.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
         <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a></p>
