--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -39,24 +39,26 @@
           </div>
           </nav>
           </navbar>
-            <main id="main">
-              <br />
-        <h2 id="thingHead"><strong>Cycle 4 Artwork</strong></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget rhoncus elit. Integer sodales velit a nisi vulputate euismod. Curabitur id nibh arcu. Vestibulum vitae justo nec velit tincidunt vulputate. Nulla interdum justo eget turpis hendrerit, ac lacinia arcu convallis. Nunc ante tortor, dictum vitae est sit amet, condimentum ultrices lacus. Praesent eget pretium sapien. Sed sollicitudin magna a urna iaculis, eget bibendum erat facilisis. Phasellus euismod nunc ut risus condimentum, ut vestibulum leo bibendum. Quisque ac enim vel mauris condimentum dignissim. </p>
-        <p><em>Click the links to view each project</em></p>
-        <!-- <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
-        <br />
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs" id='donatello'src = "Donatello2.png" height="10%"width="18%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <br /> -->
-        </main>
+          <main id="main">
+            <br />
+      <h2 id="thingHead"><strong>Cycle 4 Artwork</strong></h2>
+      <p>In Cycle 4, we focused a lot on Romantic and Modern Art. We spent time understanding the transition between the religious and perfect world of Renaissance Art to the tragic and realistic world
+      of Baroque art, then to the peaceful upper-class image of the Rococo Era, to the revival of Classical Art in the Neoclassical era. We also studied more modern art from the Impressionistic and Post-Impressionistic Eras.
+      Apart from studying art history, we also studied different drawing perspectives, such as 1-point and 2-point perspective. It was a fascinating class and we ended up going into depth on a lot of different topics.</p>
+      <p><em>Click the links to view each project</em></p>
+      </main>
+      <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>1-Point Perspective Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>2-Point Perspective Drawings</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Modern Artist Presentation</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Final Perspective Image</strong></a></p>
+      <br />
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img class="artworkImgs"class='cy4imgs'src = "2ptPerspective.png" width="20%"height="20%"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img class="artworkImgs" id='compute'src = 'VanGogh.png' width="18%"height="5%"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img class="artworkImgs" id='compute'src = 'http://placeimg.com/640/480/animals' width="18%"height="5%"/>
+      <br />
+      </main>
 
 <script src = "../js_css/listeners.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
