Inserted new final 2pt photo

--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -56,7 +56,7 @@
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs" id='compute'src = 'VanGogh.png' width="18%"height="5%"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <img class="artworkImgs" id='compute'src = 'http://placeimg.com/640/480/animals' width="18%"height="5%"/>
+      <img class="artworkImgs" id='compute'src = 'Final.png' width="18%"height="5%"/>
       <br />
       </main>
 
