--- a/cy3/still_life.html
+++ b/cy3/still_life.html
@@ -5,6 +5,7 @@
     <title>Final Still Life Sketch</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
+    <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/Palette.ico">
   </head>
   <body>
     <navbar id='navbar'>
