--- a/cy3/cy3.html
+++ b/cy3/cy3.html
@@ -46,9 +46,12 @@
         <p>In Cycle 3, we began to study Renaissance Art. We focused a lot on sketching, and also learned about the techniques and works of artists such as Michelangelo, Raphael and Donatello.
         It proved to be a very interesting topic, and it really helped us to understand the evolution of art.</p>
         <p><em>Click the links to view each project</em></p>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html">
-        <strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
+        </main>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class='descLinks'href="artist.html">
+        <strong>Renaissance Artist Presentation</strong></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><a class='descLinks'href="contours.html"><strong>Contour Drawings</strong>
+        </a></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
         <br />
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
@@ -60,7 +63,6 @@
         <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <br />
-        </main>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src = "../js_css/listeners.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
