Created new background image, added stuff to cycle 4 images

--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -14,7 +14,6 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -48,16 +47,17 @@
       Apart from studying art history, we also studied different drawing perspectives, such as 1-point and 2-point perspective. It was a fascinating class and we ended up going into depth on a lot of different topics.</p>
       <p><em>Click the links to view each project</em></p>
       </main>
-      <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="one_pt.html"><strong>1-Point Perspective Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="two_pt.html"><strong>2-Point Perspective Drawings</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; <a class='descLinks'href="van_gogh.html"><strong>Modern Artist Presentation</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="final_perspective.html"><strong>Final 2-Point Perspective Image</strong></a></p>
+      <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="perspectives.html"><strong>Perspective Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="van_gogh.html"><strong>Modern Artist Presentation</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;<a class='descLinks'href="expression.html"><strong>Expressionist Personal Image</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="modern.html"><strong>Modern Art Presentation</strong></a></p>
       <br />
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <img class="artworkImgs"class='cy4imgs'src = "2ptPerspective.png" width="20%"height="20%"/>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs" id='compute'src = 'VanGogh.png' width="18%"height="5%"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <img class="artworkImgs" id='compute'src = 'Final.png' width="18%"height="5%"/>
+      <img class="artworkImgs" src = 'expression.png' width="18%"height="5%"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img class="artworkImgs" height="380px"src = 'Abstract.png' width="18%"height="5%"/>
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <br />
       </main>
 
