--- a/cy4/two_pt.html
+++ b/cy4/two_pt.html
@@ -10,7 +10,7 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="cy4.html">Cycle 4 Artwork</a>
+        <a class="navbar-brand" href="perspectives.html">Perspective Sketches</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,10 +23,10 @@
               <a class="nav-link" id="cy1"href="#">2 Point Perspective<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="van_gogh.html">Van Gogh Presentation<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="final_1_perspective.html">Final 1-Point Perspective<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy3"href="final_perspective.html">Final 2-Point Perspective <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="final_perspective.html">Final 2-Point Perspective <span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
