--- a/cy4/van_gogh.html
+++ b/cy4/van_gogh.html
@@ -17,22 +17,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="one_pt.html">1 Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="perspectives.html">Perspective Drawings<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="two_pt.html">2 Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link"id="cy1"href="#">Modern Artist Presentation<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="#">Van Gogh Presentation<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="expression.html">Expressionist Personal Image<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy3"href="final_perspective.html">Final 2-Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="modern.html">Modern Art Presentation<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
     </nav>
     </navbar>
-
     <main id='main'>
       <br />
       <h1 id="thingHead"><strong>Van Gogh Presentation</strong></h1>
@@ -41,11 +40,12 @@
       <br /><br />
       <p><em>Medium: Google Slides</em></p>
       <a id = "link" href = "https://docs.google.com/presentation/d/14XR1mjTKvKZeLXx06MEMyWaPNowZNgMtgnBtbhxtP4Y/edit#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
-      <br /><br />
+      <br />
       <p>We did this project to learn more about artists of the Romantic and Impressionist Eras. Vibhav, Dmitry and I were all fascinated by Van Gogh, his art and his life,
          and so we wanted to learn more about him and present what we had learned. We learned more about his art style,
         his techniques and his life. This was similar to our <a id="link2"href = "../cy3/artist.html">Donatello presentation from cycle 3</a>,
-         and helped us to further develop our presentation skills.</p>
+         and helped us to further develop our presentation skills. In the process, we learned about Van Gogh's unique painting style and brushwork, The Post-Impressionistic Era which he was part of and
+       to define, his personal life, and many other things.</p>
     </main>
   <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
