--- a/cy4/final_1_perspective.html
+++ b/cy4/final_1_perspective.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>1-Point Perspective Sketch</title>
+    <title>Final 1 Point Perspective Sketch</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
     <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/paintbrush.ico">
@@ -17,16 +17,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">1 Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="one_pt.html">1 Point Perspective<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" id="cy1"href="two_pt.html">2 Point Perspective<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="final_1_perspective.html">Final 1-Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="#">Final 1-Point Perspective<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="final_perspective.html">Final 2-Point Perspective <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="final_perspective.html">Final 2-Point Perspective<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -34,14 +34,15 @@
     </navbar>
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>One Point Perspective Sketch</strong></h1><br />
-      <img id = 'onept' src = "1ptPerspective1.png"width="25%"height="14%"/>
-      <br /><br />
-      <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
+      <h1 id='thingHead'><strong>Final 1-Point Perspective Sketch</strong></h1><br />
+      <img id = 'finalsketch' src = "final_1_perspective.png"width="35%"height="20%"/><br />
+      <br />
+      <em>Mediums: 2.0 Lead Pencil, Sketchbook Paper</em>
       <br /><br /><br />
-      <p>This was our first assignment concerning drawings by perspective. It was 2-point perspective, and we ended up sketching a variety of things, from pyramids to cubes to block letters, using a horizon line a vanishing point.
-        Although I wasn't very good at it, it was a fun exercise. We again applied it when we did our <a id="link2_" href="final_1_perspective.html">Final One Point Perspective Sketch</a>. We also sketched a scene using the same method, which 
-        gives the image a thickness, making it appear 2-dimensional. We later began to learn about <a id='link2'href='two_pt.html'>2 point perspective</a>, which had a whole new look.</p>
+      <p>This was our final one-point perspective drawing. It was a fairly lousy effort on my part, but it did convey the technique we were learning,
+         to some level. It displays a mountain, as well as a house and a cow both on top of the mountain. With the horizon line and vanishing point, I was
+         able to get the doubled effect of each object. However, it wasn't my best work and I could have done it much better. 
+       </p>
     </main>
   <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
