--- a/cy4/modern.html
+++ b/cy4/modern.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>1-Point Perspective Sketch</title>
+    <title>Abstract Expressionism Presentation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
     <link type="image/png" rel="icon" href="https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/js_css/paintbrush.ico">
@@ -10,23 +10,23 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="perspectives.html">Perspective Sketches</a>
+        <a class="navbar-brand" href="cy4.html">Cycle 4 Artwork</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">1 Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="perspectives.html">Perspective Drawings<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="two_pt.html">2 Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link"id="cy1"href="van_gogh.html">Modern Artist Presentation<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="final_1_perspective.html">Final 1-Point Perspective<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy2"href="expression.html">Expressionist Personal Image<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy2"href="final_perspective.html">Final 2-Point Perspective <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="#">Modern Art Presentation<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -34,14 +34,15 @@
     </navbar>
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>One Point Perspective Sketch</strong></h1><br />
-      <img id = 'onept' src = "1ptPerspective1.png"width="25%"height="14%"/>
+      <h1 id="thingHead"><strong>Abstract Expressionism Presentation</strong></h1>
+      <br />
+      &nbsp; &nbsp; &nbsp;<img id="vangoghpic"src = "horizontal abstract.png"width="40%"/>
       <br /><br />
-      <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
-      <br /><br /><br />
-      <p>This was our first assignment concerning drawings by perspective. It was 2-point perspective, and we ended up sketching a variety of things, from pyramids to cubes to block letters, using a horizon line a vanishing point.
-        Although I wasn't very good at it, it was a fun exercise. We again applied it when we did our <a id="link2_" href="final_1_perspective.html">Final One Point Perspective Sketch</a>. We also sketched a scene using the same method, which 
-        gives the image a thickness, making it appear 2-dimensional. We later began to learn about <a id='link2'href='two_pt.html'>2 point perspective</a>, which had a whole new look.</p>
+      <p><em>Medium: Google Slides</em></p>
+      <a id = "link" href = "https://docs.google.com/presentation/d/1CpjGI84WlY6Iepo7shnoF89mVnPQbOWA53IF3447SIs/edit#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
+      <p>This presentation was an individual assigment in which we were supposed to choose an art movement from the 20th century. I chose Abstract Expressionism, an era of expressing emotion through
+      abstract, often apparently meaningless artwork, because I found it both fascinating and aesthetically pleasing art. In the process, I learned a lot about its influences, the movements it created, and
+      the famous artists during that time. After researching it, I found it to be a fascinating art period and style.</p>
     </main>
   <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
