Renamed photo for abstract expressionism

--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -56,7 +56,7 @@
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs" src = 'expression.png' width="18%"height="5%"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <img class="artworkImgs" height="380px"src = 'Abstract.png' width="18%"height="5%"/>
+      <img class="artworkImgs" height="380px"src = 'abstract.png' width="18%"height="5%"/>
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <br />
       </main>
