Removed all nonbreaking space from file

--- a/biome/biome.html
+++ b/biome/biome.html
@@ -47,10 +47,9 @@
           During these trips, we get art assignments which we include in the reports, related to something we did on the trip. From learning about Maria Montessori's Great Lesson to many other things, we always had fun art projects on these trips.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a></p>
+        <p class="space"><a class='descLinks'href="visual.html"><strong>Great Lesson Visual</strong></a></p>
         <br />
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img src = "Timeline.jpg"alt="timeline" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="space_img"src = "Timeline.jpg"alt="timeline" />
         </main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
