--- a/cy1/handout.html
+++ b/cy1/handout.html
@@ -37,7 +37,7 @@
       <br />
       <h1 id="thingHead"><strong>Color Research Handout</strong></h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Horizontal Research.png"width="50%"height="50%" />
+      <img src = "Horizontal Research.png"width="50%"height="50%" />
       <br /><br />
       <p><em>Medium: Google Slides</em></p>
       <a id = "link" href = "https://docs.google.com/presentation/d/1A07DW1CRJh98aEh_Dmd07pbfIMypb4IH58xiKWMx4qs/comment#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
