--- a/cy2/cy2.html
+++ b/cy2/cy2.html
@@ -47,15 +47,13 @@
   Our main project was to create a sculpture which showed aspects of these art forms, but we spent much of the time watching videos and taking notes about this. Overall, it proved to
   be a fascinating topic, which merged both history and art.</p>
 <p><em>Click the links to view each project</em></p>
-<p id='descriptors'><a class='descLinks'href="sculpture.html"><strong>Azure Acrobat Sculpture</strong></a>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="draft.html"><strong>Sculpture Draft</strong></a>
+<p><a id = "sculpt3"class='descLinks'href="sculpture.html"><strong>Azure Acrobat Sculpture</strong></a>
+<a class='descLinks'href="draft.html"><strong>Sculpture Draft</strong></a>
 </p>
 <br />
-&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 <img id = 'sculpture3' src = "Final_Sculpture.png"width="20%"height="50%"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img class="artworkImgs"src = "Child_at_play.png" height="50%"width="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
 <br />
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
