--- a/cy3/artist.html
+++ b/cy3/artist.html
@@ -37,7 +37,7 @@
       <br />
       <h1 id="thingHead"><strong>Donatello Presentation</strong></h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Donatello.png"width="50%"height="50%" />
+      <img src = "Donatello.png"width="50%"height="50%" />
       <br /><br />
       <p><em>Medium: Google Slides</em></p>
       <a id = "link" href = "https://docs.google.com/presentation/d/1RB6oC2Syf3KcFQLCXOoxmIOk5SpBS-YWbBSX_xkjwFk/edit?ts=5c060ff9#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
