--- a/cy3/cy3_sketches.html
+++ b/cy3/cy3_sketches.html
@@ -36,7 +36,7 @@
       <br />
       <h1 id='thingHead'><strong>Cycle 3 Sketches</strong></h1>
       <br /><br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img id = 'sculpture2' src = "Plant_sketch.png"width="25%"height="14%"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img id = 'con2' src = "Plant_sketch.png"width="25%"height="14%"/>
       <img id = 'sculpture1' src = "Plant_notes.jpg"width="35%"height="10%"rotate='90' />
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
