--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -47,17 +47,14 @@
       Apart from studying art history, we also studied different drawing perspectives, such as 1-point and 2-point perspective. It was a fascinating class and we ended up going into depth on a lot of different topics.</p>
       <p><em>Click the links to view each project</em></p>
       </main>
-      <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="perspectives.html"><strong>Perspective Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="van_gogh.html"><strong>Modern Artist Presentation</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;<a class='descLinks'href="expression.html"><strong>Expressionist Personal Image</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="modern.html"><strong>Modern Art Presentation</strong></a></p>
+      <p><a id="first_link"class='descLinks'href="perspectives.html"><strong>Perspective Drawings</strong></a><a id="second_link"class='descLinks'href="van_gogh.html"><strong>Modern Artist Presentation</strong></a></a><a id="third_link"class='descLinks'href="expression.html"><strong>Expressionist Personal Image</strong></a>
+      </a><a id="fourth_link"class='descLinks'href="modern.html"><strong>Modern Art Presentation</strong></a></p>
       <br />
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-      <img class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img id="first_img"class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
       <img class="artworkImgs" id='compute'src = 'VanGogh.png' width="18%"height="5%"/>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs" src = 'expression.png' width="18%"height="5%"/>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       <img class="artworkImgs" height="380px"src = 'abstract.png' width="18%"height="5%"/>
-      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+
       <br />
       </main>
 
