--- a/cy4/modern.html
+++ b/cy4/modern.html
@@ -36,7 +36,7 @@
       <br />
       <h1 id="thingHead"><strong>Abstract Expressionism Presentation</strong></h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img id="vangoghpic"src = "horizontal abstract.png"width="40%"/>
+      <img id="vangoghpic"src = "horizontal abstract.png"width="40%"/>
       <br /><br />
       <p><em>Medium: Google Slides</em></p>
       <a id = "link" href = "https://docs.google.com/presentation/d/1CpjGI84WlY6Iepo7shnoF89mVnPQbOWA53IF3447SIs/edit#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
