--- a/cy4/perspectives.html
+++ b/cy4/perspectives.html
@@ -40,17 +40,12 @@
     Apart from studying art history, we also studied different drawing perspectives, such as 1-point and 2-point perspective. It was a fascinating class and we ended up going into depth on a lot of different topics.</p>
     <p><em>Click the links to view each project</em></p>
     </main>
-    <p>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a class='descLinks'href="one_pt.html"><strong>1 Point Perspective</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="two_pt.html"><strong>2-Point Perspective</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="final_1_perspective.html"><strong>Final 1 Point Perspective Image</strong></a>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="final_perspective.html"><strong>Final 2-Point Perspective Image</strong></a></p>
+    <p><a id="first_perspective"class='descLinks'href="one_pt.html"><strong>1 Point Perspective</strong></a><a class='descLinks'href="two_pt.html"><strong>2-Point Perspective</strong></a></a><a class='descLinks'href="final_1_perspective.html"><strong>Final 1 Point Perspective Image</strong></a><a class='descLinks'href="final_perspective.html"><strong>Final 2-Point Perspective Image</strong></a></p>
     <br />
-    &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
     <img class="artworkImgs"class='cy4imgs'src = "1ptPerspective1.png" width="20%"height="20%"/>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <img class="artworkImgs"class='cy4imgs'src = "2ptPerspective.png" width="20%"height="20%"/>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <img class="artworkImgs"class='cy4imgs'src = "vertical_final_1_perspective.png" width="20%"height="20%"/>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <img class="artworkImgs"class='cy4imgs'src = "Final.png" width="20%"height="400px"/>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <br />
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
