--- a/cy4/van_gogh.html
+++ b/cy4/van_gogh.html
@@ -36,7 +36,7 @@
       <br />
       <h1 id="thingHead"><strong>Van Gogh Presentation</strong></h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img id="vangoghpic"src = "Horizontal_van_gogh.png"width="40%"/>
+      <img id="vangoghpic"src = "Horizontal_van_gogh.png"width="40%"/>
       <br /><br />
       <p><em>Medium: Google Slides</em></p>
       <a id = "link" href = "https://docs.google.com/presentation/d/14XR1mjTKvKZeLXx06MEMyWaPNowZNgMtgnBtbhxtP4Y/edit#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
