--- a/biome/visual.html
+++ b/biome/visual.html
@@ -37,7 +37,7 @@
       <br />
       <h1 id="thingHead"><strong>Great Lesson Visual</strong></h1>
       <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Visual 4.jpg"width="40%"height="40%" />
+      <img src = "Visual 4.jpg"width="40%"height="40%" />
       <br /><br />
       <p><em>Medium: Colored Pencil on Paper</em></p>
       <br /><br />
