--- a/cy3/contours.html
+++ b/cy3/contours.html
@@ -37,7 +37,7 @@
       <br />
       <h1 id='thingHead'><strong>Contour Sketches</strong></h1>
       <br /><br />
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img id = 'sculpture2' src = "Contour.jpg"width="25%"height="14%"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img id ='con2'src = "Contour.jpg"width="25%"height="14%"/>
       <img id = 'sculpture1' src = "Contour2.jpg"width="35%"height="30%"rotate='90' />
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Blue Felt-Tipped Marker, Sketchbook Paper</em>
