--- a/cy3/cy3.html
+++ b/cy3/cy3.html
@@ -47,21 +47,16 @@
         It proved to be a very interesting topic, and it really helped us to understand the evolution of art.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class='descLinks'href="artist.html">
-        <strong>Renaissance Artist Presentation</strong></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><a class='descLinks'href="contours.html"><strong>Contour Drawings</strong>
-        </a></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p><a id="still"class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>
+        <a id="art"class='descLinks'href="artist.html">
+        <strong>Renaissance Artist Presentation</strong></a></a><a id="con"class='descLinks'href="contours.html"><strong>Contour Drawings</strong>
+        </a></a>
         <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
         <br />
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs" id='donatello'src = "Donatello2.png" height="10%"width="18%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <br />
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src = "../js_css/listeners.js"></script>
