--- a/cy4/one_pt.html
+++ b/cy4/one_pt.html
@@ -28,6 +28,15 @@
             <li class="nav-item active">
               <a class="nav-link" id="cy2"href="final_perspective.html">Final 2-Point Perspective <span class="sr-only">(current)</span></a>
             </li>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Background Themes
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button class="dropdown-item" id="rainbow">Rainbow</button>
+                <button class="dropdown-item" id="fifty_blue">Fifty Shades of Blue</button>
+              </div>
+            </div>
           </ul>
       </div>
     </nav>
@@ -40,7 +49,7 @@
       <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
       <br /><br /><br />
       <p>This was our first assignment concerning drawings by perspective. It was 2-point perspective, and we ended up sketching a variety of things, from pyramids to cubes to block letters, using a horizon line a vanishing point.
-        Although I wasn't very good at it, it was a fun exercise. We again applied it when we did our <a id="link2_" href="final_1_perspective.html">Final One Point Perspective Sketch</a>. We also sketched a scene using the same method, which 
+        Although I wasn't very good at it, it was a fun exercise. We again applied it when we did our <a id="link2_" href="final_1_perspective.html">Final One Point Perspective Sketch</a>. We also sketched a scene using the same method, which
         gives the image a thickness, making it appear 2-dimensional. We later began to learn about <a id='link2'href='two_pt.html'>2 point perspective</a>, which had a whole new look.</p>
     </main>
   <script src = "../js_css/listeners.js"></script>
