--- a/cy5/cy5.html
+++ b/cy5/cy5.html
@@ -14,7 +14,6 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -34,16 +33,26 @@
             <li class="nav-item">
                 <a class="nav-link" id="cy5" href="#">Cycle 5</a>
             <li class="nav-item">
-                <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
+              <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
             </li>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Background Themes
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button class="dropdown-item" id="rainbow">Rainbow</button>
+                <button class="dropdown-item" id="fifty_blue">Fifty Shades of Blue</button>
+              </div>
+            </div>
           </ul>
           </div>
           </nav>
           </navbar>
-            <main id="main">
-              <h1>Cycle 5 Artwork</h1>
-        <h1>This page is currently under development</h1>
-        </main>
+          <main id="main">
+            <br />
+      <h2 id="thingHead"><strong>Cycle 5 Artwork</strong></h2>
+      <p id="under">This page is still under development</p>
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src = "../js_css/listeners.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
