--- a/cy1/cy1.html
+++ b/cy1/cy1.html
@@ -37,6 +37,15 @@
             <li class="nav-item">
               <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
             </li>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Background Themes
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button class="dropdown-item" id="rainbow">Rainbow</button>
+                <button class="dropdown-item" id="fifty_blue">Fifty Shades of Blue</button>
+              </div>
+            </div>
           </ul>
           </div>
           </nav>
